Changed pdf and png images

--- a/dynamics/kinematics/intro.tex
+++ b/dynamics/kinematics/intro.tex
@@ -186,7 +186,7 @@ Thus, combining the above two equations, we get,
 	Find the inertial velocity of the point \(P\) shown in \autoref{fig:3dtansport_thm_ex}
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=\linewidth]{figures/dynamics/3D_transport_thm_ex.jpg}
+		\includegraphics[width=\linewidth]{figures/dynamics/3D_transport_thm_ex.png}
 		\caption{Figure for \autoref{ex:3dtransport_thm}}
 		\label{fig:3dtansport_thm_ex}
 	\end{figure}
